<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_time"
        android:title="@string/time_menu"
        android:icon="@drawable/baseline_access_time_24"
        app:showAsAction="never"/>
  <!--  <item
        android:id="@+id/chose_language"
        android:title="@string/select_language"
        android:icon="@drawable/baseline_language_24"
        app:showAsAction="never"/>-->
    <item
        android:id="@+id/action_admin_panel"
        android:title="@string/admin_panel"
        android:icon="@drawable/baseline_manage_accounts_24"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_qrCode_management"
        android:title="Zarządzaj QR-Code"
        android:icon="@drawable/baseline_qr_code_24"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout_menu"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="never"/>


</menu>