<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:focusable="true"
    android:clickable="true">
 <LinearLayout
        android:id="@+id/linearLayout_admin_to_adapter"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/worker_to_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee"
            android:padding="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:inputType="textMultiLine"
            android:gravity="left"
            android:maxLines="4" />
        <TextView
            android:id="@+id/worker_time_to_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_worked"
            android:padding="10dp"
            android:gravity="left" />
        <TextView
            android:id="@+id/hours_to_settle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_to_be_billed"
            android:padding="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left"
            android:inputType="textMultiLine"
            android:maxLines="2"/>
        <TextView
         android:id="@+id/settled_hours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/billed_hours"
         android:padding="10dp"
         android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="left"
         android:inputType="textMultiLine"
         android:maxLines="2"/>
        <TextView
            android:id="@+id/worker_money_toWithdrawn_to_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_paid"
            android:padding="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left"
            android:inputType="textMultiLine"
            android:maxLines="2"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>


