<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/france3"
    app:cardElevation="10dp"
    app:cardCornerRadius="16dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp">
        <TextView
            android:id="@+id/delete_the_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before_we_start"
            android:textStyle="bold"
            android:textColor="@color/france1"
            android:textSize="30sp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_admin_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_an_administrator_or_a_user"
            android:gravity="center"
            android:textColor="@color/france1"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_the_entry"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_admin_user"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_chose_admin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:backgroundTint="@color/france2"
                android:background="@drawable/round_btn"
                android:padding="12dp"
                android:text="@string/admin"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_chose_user"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_btn"
                android:textColor="@color/white"
                android:backgroundTint="@color/france2"
                android:text="@string/user_without_dots"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>