<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/france3"
    app:cardElevation="10dp"
    app:cardCornerRadius="16dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/delete_the_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_editing"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/france1"
            android:textSize="30sp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_the_entry"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_begging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_start_time"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/france1"
                android:textSize="20sp"
                android:layout_marginTop="25dp"

                />
            <TextView
                android:id="@+id/enter_time_begging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:gravity="right"
                android:textColor="@color/france1"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_end_time"
                    android:layout_weight="1"
                    android:textColor="@color/france1"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    />
                <TextView
                    android:id="@+id/enter_time_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wprowadź"
                    android:gravity="right"
                    android:textColor="@color/france1"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/overall_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overall_working_time"
                    android:layout_weight="1"
                    android:textColor="@color/france1"
                    android:textSize="20sp"
                    />
                <TextView
                    android:id="@+id/enter_overall_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/france1"
                    android:textSize="20sp"
                    />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_btn"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/france2"
                    android:text="@string/cancel"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_approved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/france2"
                    android:background="@drawable/round_btn"
                    android:padding="12dp"
                    android:text="@string/confirm"/>

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>