<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/france3"
    app:cardElevation="10dp"
    app:cardCornerRadius="16dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">
        <TextView
            android:id="@+id/tv_completeField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_log_out"
            android:textAlignment="center"
            android:textColor="@color/france1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_completeField"
            app:layout_constraintHorizontal_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_edit_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/france2"
                android:background="@drawable/round_btn"
                android:text="@string/yes"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_settle_the_employee"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:background="@drawable/round_btn"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/france2"
                android:text="@string/no"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>